assignments/PA3/cool.output
Terminals unused in grammar

   ERROR


Rules useless in parser due to conflicts

    8 feature_list: feature

   16 attr: error ';'

   38 expr_list: error


State 15 conflicts: 1 reduce/reduce
State 19 conflicts: 3 reduce/reduce
State 66 conflicts: 10 reduce/reduce
State 71 conflicts: 10 reduce/reduce
State 80 conflicts: 1 shift/reduce
State 101 conflicts: 1 shift/reduce, 1 reduce/reduce
State 120 conflicts: 10 reduce/reduce
State 124 conflicts: 10 reduce/reduce
State 149 conflicts: 10 reduce/reduce
State 151 conflicts: 9 shift/reduce
State 163 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | error

    7 feature_list: %empty
    8             | feature
    9             | feature feature_list

   10 feature: method
   11        | attr

   12 method: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   13       | error ';'

   14 attr: OBJECTID ':' TYPEID ';'
   15     | OBJECTID ':' TYPEID ASSIGN expr ';'
   16     | error ';'

   17 formal_list: formal
   18            | formal ',' formal_list
   19            | %empty

   20 formal: OBJECTID ':' TYPEID

   21 expr: id_expr
   22     | const_expr
   23     | assign_expr
   24     | dispatch_expr
   25     | conditional_expr
   26     | loop_expr
   27     | '{' block_expr '}'
   28     | LET let_expr
   29     | CASE expr OF case_list ESAC
   30     | new_expr
   31     | isvoid_expr
   32     | arithmetic_expr
   33     | '(' expr ')'
   34     | error

   35 expr_list: expr
   36          | expr ',' expr_list
   37          | error ','
   38          | error

   39 id_expr: OBJECTID

   40 const_expr: INT_CONST
   41           | BOOL_CONST
   42           | STR_CONST

   43 assign_expr: OBJECTID ASSIGN expr

   44 dispatch_expr: expr '.' OBJECTID '(' ')'
   45              | expr '.' OBJECTID '(' expr_list ')'
   46              | OBJECTID '(' ')'
   47              | OBJECTID '(' expr_list ')'
   48              | expr '@' TYPEID '.' OBJECTID '(' ')'
   49              | expr '@' TYPEID '.' OBJECTID '(' expr_list ')'

   50 conditional_expr: IF expr THEN expr ELSE expr FI
   51                 | IF error
   52                 | IF expr THEN error
   53                 | IF expr THEN expr ELSE error

   54 loop_expr: WHILE expr LOOP expr POOL
   55          | WHILE error
   56          | WHILE expr LOOP error

   57 block_expr: expr ';'
   58           | block_expr expr ';'
   59           | error ';'

   60 let_expr: OBJECTID ':' TYPEID IN expr
   61         | OBJECTID ':' TYPEID ASSIGN expr IN expr
   62         | OBJECTID ':' TYPEID ',' let_expr
   63         | OBJECTID ':' TYPEID ASSIGN expr ',' let_expr
   64         | error ',' let_expr

   65 case_list: case
   66          | case case_list

   67 case: OBJECTID ':' TYPEID DARROW expr ';'

   68 new_expr: NEW TYPEID

   69 isvoid_expr: ISVOID expr

   70 arithmetic_expr: expr '+' expr
   71                | expr '-' expr
   72                | expr '*' expr
   73                | expr '/' expr
   74                | '~' expr
   75                | expr LE expr
   76                | expr '<' expr
   77                | expr '=' expr
   78                | NOT expr


Terminals, with rules where they appear

$end (0) 0
'(' (40) 12 33 44 45 46 47 48 49
')' (41) 12 33 44 45 46 47 48 49
'*' (42) 72
'+' (43) 70
',' (44) 18 36 37 62 63 64
'-' (45) 71
'.' (46) 44 45 48 49
'/' (47) 73
':' (58) 12 14 15 20 60 61 62 63 67
';' (59) 4 5 12 13 14 15 16 57 58 59 67
'<' (60) 76
'=' (61) 77
'@' (64) 48 49
'{' (123) 4 5 12 27
'}' (125) 4 5 12 27
'~' (126) 74
error (256) 6 13 16 34 37 38 51 52 53 55 56 59 64
CLASS (258) 4 5
ELSE (259) 50 53
FI (260) 50
IF (261) 50 51 52 53
IN (262) 60 61
INHERITS (263) 5
LET (264) 28
LOOP (265) 54 56
POOL (266) 54
THEN (267) 50 52 53
WHILE (268) 54 55 56
CASE (269) 29
ESAC (270) 29
OF (271) 29
DARROW (272) 67
NEW (273) 68
ISVOID (274) 69
STR_CONST (275) 42
INT_CONST (276) 40
BOOL_CONST (277) 41
TYPEID (278) 4 5 12 14 15 20 48 49 60 61 62 63 67 68
OBJECTID (279) 12 14 15 20 39 43 44 45 46 47 48 49 60 61 62 63 67
ASSIGN (280) 15 43 61 63
NOT (281) 78
LE (282) 75
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3, on right: 1 3
class (48)
    on left: 4 5 6, on right: 2 3
feature_list (49)
    on left: 7 8 9, on right: 4 5 9
feature (50)
    on left: 10 11, on right: 8 9
method (51)
    on left: 12 13, on right: 10
attr (52)
    on left: 14 15 16, on right: 11
formal_list (53)
    on left: 17 18 19, on right: 12 18
formal (54)
    on left: 20, on right: 17 18
expr (55)
    on left: 21 22 23 24 25 26 27 28 29 30 31 32 33 34, on right: 12
    15 29 33 35 36 43 44 45 48 49 50 52 53 54 56 57 58 60 61 63 67
    69 70 71 72 73 74 75 76 77 78
expr_list (56)
    on left: 35 36 37 38, on right: 36 45 47 49
id_expr (57)
    on left: 39, on right: 21
const_expr (58)
    on left: 40 41 42, on right: 22
assign_expr (59)
    on left: 43, on right: 23
dispatch_expr (60)
    on left: 44 45 46 47 48 49, on right: 24
conditional_expr (61)
    on left: 50 51 52 53, on right: 25
loop_expr (62)
    on left: 54 55 56, on right: 26
block_expr (63)
    on left: 57 58 59, on right: 27 58
let_expr (64)
    on left: 60 61 62 63 64, on right: 28 62 63 64
case_list (65)
    on left: 65 66, on right: 29 66
case (66)
    on left: 67, on right: 65 66
new_expr (67)
    on left: 68, on right: 30
isvoid_expr (68)
    on left: 69, on right: 31
arithmetic_expr (69)
    on left: 70 71 72 73 74 75 76 77 78, on right: 32


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    6 class: error .

    $default  reduce using rule 6 (class)


State 2

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 6


State 3

    0 $accept: program . $end

    $end  shift, and go to state 7


State 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 8


State 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 6

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 9
    '{'       shift, and go to state 10


State 7

    0 $accept: program $end .

    $default  accept


State 8

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 9

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 11


State 10

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13

    '}'  reduce using rule 7 (feature_list)

    feature_list  go to state 14
    feature       go to state 15
    method        go to state 16
    attr          go to state 17


State 11

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 18


State 12

   13 method: error . ';'
   16 attr: error . ';'

    ';'  shift, and go to state 19


State 13

   12 method: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   14 attr: OBJECTID . ':' TYPEID ';'
   15     | OBJECTID . ':' TYPEID ASSIGN expr ';'

    '('  shift, and go to state 20
    ':'  shift, and go to state 21


State 14

    4 class: CLASS TYPEID '{' feature_list . '}' ';'

    '}'  shift, and go to state 22


State 15

    8 feature_list: feature .
    9             | feature . feature_list

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13

    '}'  reduce using rule 7 (feature_list)
    '}'  [reduce using rule 8 (feature_list)]

    feature_list  go to state 23
    feature       go to state 15
    method        go to state 16
    attr          go to state 17


State 16

   10 feature: method .

    $default  reduce using rule 10 (feature)


State 17

   11 feature: attr .

    $default  reduce using rule 11 (feature)


State 18

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13

    '}'  reduce using rule 7 (feature_list)

    feature_list  go to state 24
    feature       go to state 15
    method        go to state 16
    attr          go to state 17


State 19

   13 method: error ';' .
   16 attr: error ';' .

    error     reduce using rule 13 (method)
    error     [reduce using rule 16 (attr)]
    OBJECTID  reduce using rule 13 (method)
    OBJECTID  [reduce using rule 16 (attr)]
    '}'       reduce using rule 13 (method)
    '}'       [reduce using rule 16 (attr)]
    $default  reduce using rule 13 (method)


State 20

   12 method: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}' ';'

    OBJECTID  shift, and go to state 25

    $default  reduce using rule 19 (formal_list)

    formal_list  go to state 26
    formal       go to state 27


State 21

   14 attr: OBJECTID ':' . TYPEID ';'
   15     | OBJECTID ':' . TYPEID ASSIGN expr ';'

    TYPEID  shift, and go to state 28


State 22

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 29


State 23

    9 feature_list: feature feature_list .

    $default  reduce using rule 9 (feature_list)


State 24

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'

    '}'  shift, and go to state 30


State 25

   20 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 31


State 26

   12 method: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}' ';'

    ')'  shift, and go to state 32


State 27

   17 formal_list: formal .
   18            | formal . ',' formal_list

    ','  shift, and go to state 33

    $default  reduce using rule 17 (formal_list)


State 28

   14 attr: OBJECTID ':' TYPEID . ';'
   15     | OBJECTID ':' TYPEID . ASSIGN expr ';'

    ASSIGN  shift, and go to state 34
    ';'     shift, and go to state 35


State 29

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 30

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 36


State 31

   20 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 37


State 32

   12 method: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 38


State 33

   18 formal_list: formal ',' . formal_list

    OBJECTID  shift, and go to state 25

    $default  reduce using rule 19 (formal_list)

    formal_list  go to state 39
    formal       go to state 27


State 34

   15 attr: OBJECTID ':' TYPEID ASSIGN . expr ';'

    error       shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr              go to state 55
    id_expr           go to state 56
    const_expr        go to state 57
    assign_expr       go to state 58
    dispatch_expr     go to state 59
    conditional_expr  go to state 60
    loop_expr         go to state 61
    new_expr          go to state 62
    isvoid_expr       go to state 63
    arithmetic_expr   go to state 64


State 35

   14 attr: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 14 (attr)


State 36

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 37

   20 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 20 (formal)


State 38

   12 method: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 65


State 39

   18 formal_list: formal ',' formal_list .

    $default  reduce using rule 18 (formal_list)


State 40

   34 expr: error .

    $default  reduce using rule 34 (expr)


State 41

   50 conditional_expr: IF . expr THEN expr ELSE expr FI
   51                 | IF . error
   52                 | IF . expr THEN error
   53                 | IF . expr THEN expr ELSE error

    error       shift, and go to state 66
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr              go to state 67
    id_expr           go to state 56
    const_expr        go to state 57
    assign_expr       go to state 58
    dispatch_expr     go to state 59
    conditional_expr  go to state 60
    loop_expr         go to state 61
    new_expr          go to state 62
    isvoid_expr       go to state 63
    arithmetic_expr   go to state 64


State 42

   28 expr: LET . let_expr

    error     shift, and go to state 68
    OBJECTID  shift, and go to state 69

    let_expr  go to state 70


State 43

   54 loop_expr: WHILE . expr LOOP expr POOL
   55          | WHILE . error
   56          | WHILE . expr LOOP error

    error       shift, and go to state 71
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr              go to state 72
    id_expr           go to state 56
    const_expr        go to state 57
    assign_expr       go to state 58
    dispatch_expr     go to state 59
    conditional_expr  go to state 60
    loop_expr         go to state 61
    new_expr          go to state 62
    isvoid_expr       go to state 63
    arithmetic_expr   go to state 64


State 44

   29 expr: CASE . expr OF case_list ESAC

    error       shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr              go to state 73
    id_expr           go to state 56
    const_expr        go to state 57
    assign_expr       go to state 58
    dispatch_expr     go to state 59
    conditional_expr  go to state 60
    loop_expr         go to state 61
    new_expr          go to state 62
    isvoid_expr       go to state 63
    arithmetic_expr   go to state 64


State 45

   68 new_expr: NEW . TYPEID

    TYPEID  shift, and go to state 74


State 46

   69 isvoid_expr: ISVOID . expr

    error       shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr              go to state 75
    id_expr           go to state 56
    const_expr        go to state 57
    assign_expr       go to state 58
    dispatch_expr     go to state 59
    conditional_expr  go to state 60
    loop_expr         go to state 61
    new_expr          go to state 62
    isvoid_expr       go to state 63
    arithmetic_expr   go to state 64


State 47

   42 const_expr: STR_CONST .

    $default  reduce using rule 42 (const_expr)


State 48

   40 const_expr: INT_CONST .

    $default  reduce using rule 40 (const_expr)


State 49

   41 const_expr: BOOL_CONST .

    $default  reduce using rule 41 (const_expr)


State 50

   39 id_expr: OBJECTID .
   43 assign_expr: OBJECTID . ASSIGN expr
   46 dispatch_expr: OBJECTID . '(' ')'
   47              | OBJECTID . '(' expr_list ')'

    ASSIGN  shift, and go to state 76
    '('     shift, and go to state 77

    $default  reduce using rule 39 (id_expr)


State 51

   78 arithmetic_expr: NOT . expr

    error       shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr              go to state 78
    id_expr           go to state 56
    const_expr        go to state 57
    assign_expr       go to state 58
    dispatch_expr     go to state 59
    conditional_expr  go to state 60
    loop_expr         go to state 61
    new_expr          go to state 62
    isvoid_expr       go to state 63
    arithmetic_expr   go to state 64


State 52

   74 arithmetic_expr: '~' . expr

    error       shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr              go to state 79
    id_expr           go to state 56
    const_expr        go to state 57
    assign_expr       go to state 58
    dispatch_expr     go to state 59
    conditional_expr  go to state 60
    loop_expr         go to state 61
    new_expr          go to state 62
    isvoid_expr       go to state 63
    arithmetic_expr   go to state 64


State 53

   27 expr: '{' . block_expr '}'

    error       shift, and go to state 80
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr              go to state 81
    id_expr           go to state 56
    const_expr        go to state 57
    assign_expr       go to state 58
    dispatch_expr     go to state 59
    conditional_expr  go to state 60
    loop_expr         go to state 61
    block_expr        go to state 82
    new_expr          go to state 62
    isvoid_expr       go to state 63
    arithmetic_expr   go to state 64


State 54

   33 expr: '(' . expr ')'

    error       shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr              go to state 83
    id_expr           go to state 56
    const_expr        go to state 57
    assign_expr       go to state 58
    dispatch_expr     go to state 59
    conditional_expr  go to state 60
    loop_expr         go to state 61
    new_expr          go to state 62
    isvoid_expr       go to state 63
    arithmetic_expr   go to state 64


State 55

   15 attr: OBJECTID ':' TYPEID ASSIGN expr . ';'
   44 dispatch_expr: expr . '.' OBJECTID '(' ')'
   45              | expr . '.' OBJECTID '(' expr_list ')'
   48              | expr . '@' TYPEID '.' OBJECTID '(' ')'
   49              | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   70 arithmetic_expr: expr . '+' expr
   71                | expr . '-' expr
   72                | expr . '*' expr
   73                | expr . '/' expr
   75                | expr . LE expr
   76                | expr . '<' expr
   77                | expr . '=' expr
